# neural_cv_blog

./: Notes.MD  README.md  data.md  gst-example.md  historu.txt
C++_darcnet_yolov4/: readme.md
C++_example/C++_ implement_key_point_search/CMake_Torch/: CMakeLists.txt  CMake_ex.cpp  ceypoint.cpp
C++_example/C++_14022022_/CMake_Torch/: CMakeLists.txt  CMake_ex.cpp
C++_example/C++_memoru_example/CMake_Torch/: CMakeLists.txt  Thread.cpp
C++_example/C++_nanodet_cv/: CMakeLists.txt
C++_example/C++_opencv_histograms/CMake_Torch/: CMake_ex.cpp  CMake_ex_.cpp
C++_example/C++_opencv_make_camera_calibration/CMake_Torch/: CMakeLists.txt  camera_calibration.cpp  camera_calibration.h
C++_example/C++_opencv_opencamera/CMake_Torch/: CMake_ex.cpp
C++_example/C++_thread_mutex_QT/: .gitignore  CMakeLists.txt
C++_example/C++_thread_mutex_QT/CMake_Torch/: CMakeLists.txt  GST_test.cpp  Mutex.cpp  QT.cpp  Thread.cpp  opencv_hardpanarama.cpp  opencv_panaram.cpp
C++_example/C++_thread_mutex_QT/QT/: CMakeLists.txt  QT.cpp  mainwindow.cpp  mainwindow.ui  networkthread.cpp  networkthread.h  object.cpp  object.h
C++_example/C++_win_tensorrt_QT/: CMakeLists.txt  inference_fp16.cpp  main.cpp  tracker_dasiamrpn.cpp  treacker.h
C++_onnx_tensorrt_demo/: CMakeLists.txt  README.md  inference.cpp  loader.h  main.cpp
C++_tensorrt/: .gitignore  CMakeLists_linux.txt  CMakeLists_win.txt  README.md  build_engine.py  main.cpp  object_detector_fp16.h  old.cpp  tracker_dasiamrpn.cpp
C++_torch_inf_pt_script/: CMakeLists.txt  README.md
C++_torch_inf_pt_script/CMake_Torch/: CMakeLists.txt  CMake_Torch.cpp
C++_torch_yolov4/: CMakeLists.txt  README.md
C++_torch_yolov4/CMake_Torch/: CMakeLists.txt  CMake_Torch.cpp  coco_names.h  config.cpp  config.h  darknet.cpp  darknet.h  main.cpp
C++_yolop/: .gitignore  README.md
C++_yolop/CMake_Torch/: CMakeLists.txt
C++_yolov5/: README.md
C++_yolov5/yolov5_opencv_C++/: CMakeLists.txt  yolo_opencv.cpp
C++_yolov5/yolov5_tensorrt/: CMakeLists.txt  inference_fp16.cpp  yolo_opencv.cpp
C++_yolox/: README.md
create_dll_for_python_C++/: .gitignore  README.md  example.py
create_dll_for_python_C++/MathLibrary/: MathLibrary.cpp  MathLibrary.h
docker/: Docker_ssh  Dockerfile_gui  README.md  install_depends.sh
opencv_treacker/: .gitignore
opencv_treacker/cpp/: CMakeLists.txt  CMakeSettings.json  main.cpp  main_o.cpp
opencv_yolo_C++/: .gitignore
opencv_yolo_C++/cpp/: CMakeLists.txt  main.cpp
python_colorization_demo_openvino/: colorization_demo.py  redmi.txt
python_folder/: README.md
python_folder/Cemara_semple/: 2frame_concat_opencv.py
python_folder/GOPRO_CAMERA/: FFMPEG_example.py  GOPRO_example.py  OPENCV_example.py  README.md
python_folder/ONNX_preplot_example/: Example onnx - torch - onnx new shape.ipynb  build_engine.py  debag_2.ipynb  debag_nn.ipynb  onnx_demo_1_delete_graph.ipynb  torch_base_to_onnx.ipynb
python_folder/Python_Stabilization_Video/: stab_cv2_only_v3_06042021.py
python_folder/TF_example/: tf_show the heat map.ipynb
python_folder/TopFormer_01/: TopFormer_demo 13_04_2022.ipynb
С++_nanodet/: CMakeLists.txt  README.md  inference_fp16.cpp  main.cpp  object_detector_fp16.h
С++_nanodet/nanodet-train/: eval_results.txt  export_onnx.ipynb  nanodet-plus-m-1.5x_320.yml  nanodet-plus-m_320.yml
С++_opencv_alloc/: CMakeLists.txt  README.md  main.cpp
